--- a/index.html
+++ b/index.html
@@ -10,10 +10,30 @@
     <title>Weather App</title>
 </head>
 <body>
-    <div class="container"> 
-    <h1>Hello World</h1>
-    <a href="" class="btn btn-primary">Click Me</a>
-</div>
+    <div class="container">
+        <div class="weather-app"> 
+    <h1>Stockholm</h1>
+    <ul>
+        <li>wednesday 14:50</li>
+        <li> Clear</li>
+        <!-- next section-->
+        <div class="row">
+            <div class="col-6">
+                <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear"/>
+
+                12°C | °F
+            </div>
+            <div class="col-6">
+                <ul>
+                    <li> Perciptation :0%</li>
+                    <li> Humidity : 75% </li>
+                    <li>Wind: km/h</li>
+                </ul>
+            </div>  
+        </div>   <!-- rows div-->
+    </div> <!-- border div-->
+    </ul>
+</div><!-- container div-->
     
     <script src="src/app.js"></script>
 </body>
