Styled Temperature Section

--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
 <body>
     <div class="container">
         <div class="weather-app"> 
+            <div class="overview"> 
     <h1>Stockholm</h1>
     <ul>
         <li>wednesday 14:50</li>
         <li> Clear</li>
         <!-- next section-->
+        </ul>
+    </div>
         <div class="row">
             <div class="col-6">
+                <div class="weather-temperature"> 
                 <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear"/>
-
-                12°C | °F
+               <span class="number">12</span><span class="units">°C| <a href="#" target="_blank" rel="noopener noreferrer">°F</a></span>
+               
+            </div>
             </div>
             <div class="col-6">
                 <ul>
