Added API's to the weather and Date

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="src/style.css">
 
@@ -13,10 +15,10 @@
     <div class="container">
         <div class="weather-app"> 
             <div class="overview"> 
-    <h1>Stockholm</h1>
+    <h1 id="city"></h1>
     <ul>
-        <li>wednesday 14:50</li>
-        <li> Clear</li>
+        <li id="date">wednesday 14:50</li>
+        <li id="description"> Clear</li>
         <!-- next section-->
         </ul>
     </div>
@@ -24,15 +26,14 @@
             <div class="col-6">
                 <div class="weather-temperature"> 
                 <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear"/>
-               <span class="number">12</span><span class="units">°C| <a href="#" target="_blank" rel="noopener noreferrer">°F</a></span>
+               <span class="number" id="temperature"></span><span class="units">°C| <a href="#" target="_blank" rel="noopener noreferrer">°F</a></span>
                
             </div>
             </div>
             <div class="col-6">
                 <ul>
-                    <li> Perciptation :0%</li>
-                    <li> Humidity : 75% </li>
-                    <li>Wind: km/h</li>
+                    <li id="humidity">  </li>
+                    <li id="wind"></li>
                 </ul>
             </div>  
         </div>   <!-- rows div-->
