--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
 <body>
     <div class="container">
         <div class="weather-app"> 
-           
+            <form id="search-form" class="mb-4">
+                <div class="row">
+                    <div class="col-10"> 
+                <input type="search" placeholder="Type a city name.." class="form-control"/>
+            </div> <!--end of col-9-->
+            <div class="col-2"> 
+                <input type="submit" value="search" class="btn btn-primary w-100"/>
+            </div> <!--end of col-3-->
+            </div> <!--end of row-->
+
+            </form>
+
+
+            <!--End form-->
             <div class="overview"> 
     <h1 id="city"></h1>
     <ul>
