Added form functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <form id="search-form" class="mb-4">
                 <div class="row">
                     <div class="col-10"> 
-                <input type="search" placeholder="Type a city name.." class="form-control"/>
+                <input type="search" placeholder="Type a city name.." class="form-control"
+                id="city-input" autocomplete="off"/>
             </div> <!--end of col-9-->
             <div class="col-2"> 
                 <input type="submit" value="search" class="btn btn-primary w-100"/>
