Added Unit conversion

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <img src="" alt="" id="icon"
                 
                 "/>
-               <span class="number" id="temperature"></span><span class="units">°C| <a href="#" target="_blank" rel="noopener noreferrer">°F</a></span>
+               <span class="number" id="temperature"></span><span class="units" > <a href="#" id="celsius-link" class="active">°C| </a>
+                 <a href="#" target="_blank" rel="noopener noreferrer" id="fahrenheit-link">°F</a></span>
                
             </div>
             </div>
